# code-splitter

./: .cursorignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yml  python.yml  python_release.yml  release.yml  rust_ci.yml  rust_release.yml
bindings/python/: Cargo.toml  README.md  justfile  pyproject.toml
bindings/python/src/: chunk.rs  language.rs  lib.rs  splitter.rs
bindings/python/tests/: test_markdown.py
examples/: README.md
src/: chunk.rs  lib.rs  sizer.rs  splitter.rs
src/sizer/: chars.rs  huggingface.rs  tiktoken.rs  words.rs
src/splitter/: chars.rs  huggingface.rs  tiktoken.rs  words.rs
tests/: golang.rs  markdown.rs  python.rs  rust.rs
tests/testdata/: example.md  greetings.go  markdown.md  rectangle.go  rectangle.py  rectangle.rs
