[package]
name = "code-splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
tiktoken-rs = { version = "0.5.9", optional = true }
tokenizers = { version = "0.19.1", features = ["http"], optional = true}
tree-sitter = "0.22"

[dev-dependencies]
tree-sitter-go = "0.21"
tree-sitter-md = "0.2"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"

[features]
tiktoken-rs = ["dep:tiktoken-rs"]
tokenizers = ["dep:tokenizers"]
