[package]
name = "code-splitter-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "code_splitter"
crate-type = ["cdylib"]

[dependencies]
code-splitter = { path = "../..", features = [
    "tiktoken-rs",
    "tokenizers",
]}
libloading = "0.8"
pyo3 = "0.21.1"
tiktoken-rs = { version = "0.5.9", optional = true }
tokenizers = { version = "0.19.1", features = ["http"], optional = true}
tree-sitter = "0.22"
